# revowait-sixdof

./: .gitignore  .gitlab-ci.yml  README.md  hinge_layout.py  platform_client.py  platform_config.json  protocol_control.py  protocol_udp.py  pyproject.toml  sf.py  test.py  test_sixsf.py
.github/workflows/: ci.yml
.opencode/skills/: clash-proxy-check.md
docs/: api.md  index.md
scripts/: build-wheel.sh  ci-set-release-version.sh  ci_set_release_version.py
src/: calibration.py  hinge_layout.py  interface.py  logger_config.py  protocol_control.py  protocol_udp.py  stewart_fk.py  udp_service.py
tests/: test.py  test_import.py
