[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stewart-platform-fk"
dynamic = ["version"]
description = "Stewart platform forward kinematics control interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "build>=1.0",
]
test = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
